--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "https_port": 443,
+  "Mp3": {
+    "MaxUploadSize": 52428800
+  },
   "Spleeter": {
     "MaxDuration": 1200
   },
@@ -10,9 +13,10 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
