extend max body size

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,7 @@ worker_processes 4;
 events { worker_connections 1024; }
 
 http {
+	client_max_body_size 80M;
     sendfile on;
     fastcgi_read_timeout 2000;
     proxy_read_timeout 2000;
