pre-add GPU processing

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -4,7 +4,7 @@
     "MaxUploadSize": 52428800
   },
   "Spleeter": {
-    "AnacondaScript": "\"D:/ProgramData/Anaconda3/Scripts/activate.bat\" \"D:/ProgramData/Anaconda3/envs/spleeter-gpu\"",
+    "AnacondaScript": "\"C:/ProgramData/Anaconda3/Scripts/activate.bat\" \"C:/ProgramData/Anaconda3/envs/spleeter-gpu\"",
     "OutputFolder": "c:/spleeter/output",
     "MaxDuration": 1200
   },
