--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,8 @@
     "MaxUploadSize": 52428800
   },
   "Spleeter": {
+    "AnacondaScript": "\"D:/ProgramData/Anaconda3/Scripts/activate.bat\" \"D:/ProgramData/Anaconda3/envs/spleeter-gpu\"",
+    "OutputFolder": "c:/spleeter/output",
     "MaxDuration": 1200
   },
   "Youtube": {
