Adding Audit.NET and logs

--- a/SpleeterAPI.csproj
+++ b/SpleeterAPI.csproj
@@ -69,6 +69,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="Audit.NET" Version="14.8.0" />
+    <PackageReference Include="Audit.NET.Udp" Version="14.8.0" />
+    <PackageReference Include="Audit.WebApi" Version="14.8.0" />
   </ItemGroup>
 
   <ItemGroup>
