--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -5,7 +5,9 @@
   },
   "Spleeter": {
     "AnacondaScript": "\"C:/ProgramData/Anaconda3/Scripts/activate.bat\" \"C:/ProgramData/Anaconda3/envs/spleeter-gpu\"",
+    "InputFolder": "c:/spleeter/input",
     "OutputFolder": "c:/spleeter/output",
+    "CacheFolder": "c:/spleeter/cache",
     "MaxDuration": 1200
   },
   "Youtube": {
