--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     "MaxUploadSize": 52428800
   },
   "Spleeter": {
-    "AnacondaScript": "\"D:/ProgramData/Anaconda3/Scripts/activate.bat\" \"D:/ProgramData/Anaconda3/envs/spleeter-gpu\"",
+    "AnacondaScript": "\"C:/tools/miniconda3/Scripts/activate.bat\"",
     "InputFolder": "c:/spleeter/input",
     "OutputFolder": "c:/spleeter/output",
     "CacheFolder": "c:/spleeter/cache",
