adding file log

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,7 @@
   "cors_enabled": true,
   "https_enabled": false,
   "https_port": 443,
+  "FileLogPath": "c:/spleeter",
   "Mp3": {
     "MaxUploadSize": 52428800
   },
