--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -2,6 +2,7 @@
   "cors_enabled": true,
   "https_enabled": true,
   "https_port": 443,
+  "FileLogPath": "c:/spleeter",
   "Mp3": {
     "MaxUploadSize": 52428800
   },
