--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -20,11 +20,11 @@
     "SpleeterAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:5001/test",
+      "launchUrl": "https://localhost:5001/swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MODEL_PATH": "c:/spleeter/model",
         "ASPNETCORE_URLS": "https://+:5001;http://+:5000",
-        "MODEL_PATH": "c:/spleeter/model"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000"
     },
