--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,7 @@
     "MaxUploadSize": 52428800
   },
   "Spleeter": {
-    "AnacondaScript": "\"C:/tools/miniconda3/Scripts/activate.bat\"",
+    "AnacondaScript": "'c:/Program Files/miniconda3/Scripts/activate.bat'",
     "InputFolder": "c:/spleeter/input",
     "OutputFolder": "c:/spleeter/output",
     "CacheFolder": "c:/spleeter/cache",
