--- a/appsettings.json
+++ b/appsettings.json
@@ -26,5 +26,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Subject": "spl.eastus.cloudapp.azure.com",
+        "Store": "Root",
+        "Location": "LocalMachine"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
