--- a/appsettings.json
+++ b/appsettings.json
@@ -28,11 +28,11 @@
   },
   "Kestrel": {
     "Certificates": {
-      "Default": {
-        "Subject": "spl.eastus.cloudapp.azure.com",
-        "Store": "Root",
-        "Location": "LocalMachine"
-      }
+      //"Default": {
+      //  "Subject": "spl.eastus.cloudapp.azure.com",
+      //  "Store": "Root",
+      //  "Location": "LocalMachine"
+      //}
     }
   },
   "AllowedHosts": "*"
